--- a/css/screen.css
+++ b/css/screen.css
@@ -2,6 +2,26 @@
   #FONTS
 \*------------------------------------*/
 
+@font-face {
+    font-family:"HK Grotesk web";
+    font-weight: 200;
+    src:url("../fonts/hkgrotesk-light-webfont.woff") format("woff"),
+        url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2");
+    }
+
+@font-face {
+    font-family:"HK Grotesk web";
+    font-weight: 400;
+    src:url("../fonts/hkgrotesk-medium-webfont.woff") format("woff"),
+        url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2");
+    }
+
+@font-face {
+    font-family:"HK Grotesk web";
+    font-weight: 600;
+    src:url("../fonts/hkgrotesk-regular-webfont.woff") format("woff"),
+        url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2");
+    }
 /*------------------------------------*\
   #GENERIC
 \*------------------------------------*/
@@ -15,8 +35,8 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: Helvetica, arial, sans-serif;
-    color: #111;
+    font-family: "HK Grotesk web", arial, sans-serif;
+    color: #202024;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -28,6 +48,13 @@ html {
     box-sizing: inherit;
 }
 
+@media (min-width: 768px) {
+    html {
+        font-size: 20px;
+        line-height: 1.6;
+    }
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
@@ -36,7 +63,7 @@ html {
  */
 
 ::selection {
-    background: #e85e00;
+    background: #5051DB;
     color: white;
     text-shadow: none;
 }
@@ -61,6 +88,12 @@ img {
     ---
     Default markup for typographic elements
 */
+
+h1,
+h2,
+h3 {
+    font-weight: 200;
+}
 
 h1 {
     font-size: 36px;
@@ -142,7 +175,7 @@ a {
 
 a:visited,
 a:active {
-    color: BlueViolet;
+    color: #3E3EA8;
 }
 
 a:hover,
@@ -195,7 +228,7 @@ a:focus {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 90em; /* 90 * 16px = 1440px */
+    max-width: 65.4em; /* 56.4 * 20px = 1128px */
 }
 
 /*
