--- a/css/screen.css
+++ b/css/screen.css
@@ -1,41 +1,39 @@
 /*------------------------------------*\
   #FONTS
 \*------------------------------------*/
-
 @font-face {
-    font-family:"HK Grotesk web";
+    font-family: "HK Grotesk Web";
     font-weight: 200;
-    src:url("../fonts/hkgrotesk-light-webfont.woff") format("woff"),
-        url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2");
-    }
+    src: url("../fonts/hkgrotesk-light-webfont.woff2") format("woff2"),
+        url("../fonts/hkgrotesk-light-webfont.woff") format("woff");
+}
 
 @font-face {
-    font-family:"HK Grotesk web";
+    font-family: "HK Grotesk Web";
     font-weight: 400;
-    src:url("../fonts/hkgrotesk-medium-webfont.woff") format("woff"),
-        url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2");
-    }
+    src: url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2"),
+        url("../fonts/hkgrotesk-regular-webfont.woff") format("woff");
+}
 
 @font-face {
-    font-family:"HK Grotesk web";
+    font-family: "HK Grotesk Web";
     font-weight: 600;
-    src:url("../fonts/hkgrotesk-regular-webfont.woff") format("woff"),
-        url("../fonts/hkgrotesk-regular-webfont.woff2") format("woff2");
-    }
+    src: url("../fonts/hkgrotesk-medium-webfont.woff2") format("woff2"),
+        url("../fonts/hkgrotesk-medium-webfont.woff") format("woff");
+}
+
 /*------------------------------------*\
   #GENERIC
 \*------------------------------------*/
-
 /*
     Generic: Page
     ---
     Global page styles + universal box-sizing:
 */
-
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: "HK Grotesk web", arial, sans-serif;
+    font-family: "HK Grotesk Web", Helvetica, arial, sans-serif;
     color: #202024;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
@@ -48,20 +46,12 @@ html {
     box-sizing: inherit;
 }
 
-@media (min-width: 768px) {
-    html {
-        font-size: 20px;
-        line-height: 1.6;
-    }
-}
-
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
  *
  * Customize the background color to match your design.
  */
-
 ::selection {
     background: #5051DB;
     color: white;
@@ -71,13 +61,11 @@ html {
 /*------------------------------------*\
   #Elements
 \*------------------------------------*/
-
 /*
     Elements: Images
     ---
     Default markup for images to make them responsive
 */
-
 img {
     max-width: 100%;
     vertical-align: top;
@@ -88,13 +76,6 @@ img {
     ---
     Default markup for typographic elements
 */
-
-h1,
-h2,
-h3 {
-    font-weight: 200;
-}
-
 h1 {
     font-size: 36px;
     line-height: 48px;
@@ -111,6 +92,10 @@ h3 {
     font-size: 26px;
     line-height: 32px;
     margin: 0 0 24px;
+}
+
+h1, h2, h3 {
+    font-weight: 200;
 }
 
 h4,
@@ -169,30 +154,56 @@ hr {
 }
 
 a {
-    color: RoyalBlue;
+    color: #5051DB;
     transition: all .1s ease-in-out;
 }
 
 a:visited,
 a:active {
-    color: #3E3EA8;
+    color: #202024;
 }
 
 a:hover,
 a:focus {
-    color: Crimson;
+    color: #3E3EA8;
 }
 
 /*------------------------------------*\
   #OBJECTS
 \*------------------------------------*/
+/*
+    Objects: section
+    ---
+    Creates vertical whitespace between adjacent sections inside a row
+*/
+.o-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.o-section+.o-section {
+    margin-top: 24px;
+}
+
+@media (min-width: 768px) {
+
+    .o-section--lg+.o-section--lg,
+    .o-section--xl+.o-section--xl {
+        margin-top: 48px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .o-section--xl+.o-section--xl {
+        margin-top: 72px;
+    }
+}
 
 /*
     Objects: Row
     ---
     Creates a horizontal row that stretches the viewport and adds padding around children
 */
-
 .o-row {
     position: relative;
     padding: 24px 24px 0;
@@ -201,15 +212,29 @@ a:focus {
 }
 
 /* size modifiers */
-
 .o-row--lg {
     padding: 48px 24px 24px;
 }
 
+/*Color*/
+.o-row-neutral-x-light {
+    background-color: #F8F7FC;
+}
+
 @media (min-width: 768px) {
+    html {
+        font-size: 20px;
+        line-height: 1.6;
+    }
+
     .o-row {
         padding-left: 48px;
         padding-right: 48px;
+    }
+
+    .o-row--md {
+        padding-left: 48px;
+        padding-right: 24px;
     }
 
     .o-row--lg {
@@ -223,12 +248,12 @@ a:focus {
     ---
     Creates a horizontal container that sets de global max-width
 */
-
 .o-container {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    max-width: 65.4em; /* 56.4 * 20px = 1128px */
+    max-width: 56.4em;
+    /* 90 * 16px = 1440px */
 }
 
 /*
@@ -238,7 +263,6 @@ a:focus {
     contains the basic structural elements, but classes should be complemented
     with width utilities
 */
-
 .o-layout {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -246,17 +270,16 @@ a:focus {
     flex-wrap: wrap;
 }
 
-    .o-layout__item {
-        width: 100%;
-    }
+.o-layout__item {
+    width: 100%;
+}
 
 /* gutter modifiers, these affect o-layout__item too */
-
 .o-layout--gutter {
     margin: 0 -12px;
 }
 
-.o-layout--gutter > .o-layout__item {
+.o-layout--gutter>.o-layout__item {
     padding: 0 12px;
 }
 
@@ -264,7 +287,7 @@ a:focus {
     margin: 0 -6px;
 }
 
-.o-layout--gutter-sm > .o-layout__item {
+.o-layout--gutter-sm>.o-layout__item {
     padding: 0 6px;
 }
 
@@ -272,18 +295,16 @@ a:focus {
     margin: 0 -24px;
 }
 
-.o-layout--gutter-lg > .o-layout__item {
+.o-layout--gutter-lg>.o-layout__item {
     padding: 0 24px;
 }
 
 /* reverse horizontal row modifier */
-
 .o-layout--row-reverse {
     flex-direction: row-reverse;
 }
 
 /* Horizontal alignment modifiers*/
-
 .o-layout--justify-start {
     justify-content: flex-start;
 }
@@ -309,7 +330,6 @@ a:focus {
 }
 
 /* Vertical alignment modifiers */
-
 .o-layout--align-start {
     align-items: flex-start;
 }
@@ -327,7 +347,6 @@ a:focus {
 }
 
 /* Vertical alignment modifiers that only work if there is one than one flex item */
-
 .o-layout--align-content-start {
     align-content: start;
 }
@@ -353,17 +372,16 @@ a:focus {
     ---
     Small reusable object to remove default list styling from lists
 */
-
 .o-list {
     list-style: none;
     padding: 0;
 }
 
-
-/*------------------------------------*\
-  #COMPONENTS
-\*------------------------------------*/
-
+/*
+    Component: Logo
+    ---
+    Website main logo
+*/
 .c-logo {
     height: 32px;
 }
@@ -383,7 +401,6 @@ a:focus {
     ---
     Main navigation of the site
 */
-
 .c-nav {
     font-size: 18px;
     line-height: 24px;
@@ -396,28 +413,23 @@ a:focus {
 .c-nav__link {
     text-decoration: none;
     font-weight: 400;
-    padding: 8px 0;
     display: block;
+    padding: 8px 0;
 }
 
 .c-nav__link,
 .c-nav__link:visited,
 .c-nav__link:active {
-    color: #202024
+    color: #202024;
 }
 
 .c-nav__link--meta,
 .c-nav__link--meta:visited,
 .c-nav__link--meta:active {
-    color: #6C6C75
+    color: #6c6c75;
 }
 
-.c-nav__link:hover,
-.c-nav__link:focus {
-    color: #5051db
-}
-
-.is-current .c-nav__link,
+.is-selected.c-nav__link,
 .c-nav__link:hover,
 .c-nav__link:focus {
     color: #5051db;
@@ -440,18 +452,17 @@ a:focus {
     ---
     Main header of the website
 */
+.c-header {
+    display: flex;
+    justify-content: space-between;
+}
 
 .c-header__nav {
     display: none;
 }
 
 @media (min-width: 992px) {
-    .c-header {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
-    }
+    .c-header {}
 
     .c-header__nav {
         display: block;
@@ -459,15 +470,25 @@ a:focus {
 }
 
 /*------------------------------------*\
+  #COMPONENTS
+\*------------------------------------*/
+/*------------------------------------*\
   #UTILITIES
 \*------------------------------------*/
+/*
+    Utilities: spacing
+    ---
+    Utility classes to put specific margins and paddings onto elements
+*/
+.u-pt-clear {
+    padding-top: 0 !important;
+}
 
 /*
     Utilities: max-width
     ---
     Utility classes to put specific max widths onto elements
 */
-
 .u-max-width-xs {
     max-width: 18em !important;
 }
@@ -498,7 +519,6 @@ a:focus {
     Utility classes to put specific widths onto elements
     Will be mostly used on o-layout__item
 */
-
 .u-width-auto {
     width: auto !important;
 }
@@ -551,33 +571,43 @@ a:focus {
     .u-1-of-2-bp1 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp1 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp1 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp1 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp1 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp1 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp1 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp1 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp1 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp1 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp1 {
         width: 83.3333333333% !important;
     }
@@ -587,33 +617,43 @@ a:focus {
     .u-1-of-2-bp2 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp2 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp2 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp2 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp2 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp2 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp2 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp2 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp2 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp2 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp2 {
         width: 83.3333333333% !important;
     }
@@ -623,33 +663,43 @@ a:focus {
     .u-1-of-2-bp3 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp3 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp3 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp3 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp3 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp3 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp3 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp3 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp3 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp3 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp3 {
         width: 83.3333333333% !important;
     }
@@ -659,33 +709,43 @@ a:focus {
     .u-1-of-2-bp4 {
         width: 50% !important;
     }
+
     .u-1-of-3-bp4 {
         width: 33.3333333333% !important;
     }
+
     .u-2-of-3-bp4 {
         width: 66.6666666667% !important;
     }
+
     .u-1-of-4-bp4 {
         width: 25% !important;
     }
+
     .u-3-of-4-bp4 {
         width: 75% !important;
     }
+
     .u-1-of-5-bp4 {
         width: 20% !important;
     }
+
     .u-2-of-5-bp4 {
         width: 40% !important;
     }
+
     .u-3-of-5-bp4 {
         width: 60% !important;
     }
+
     .u-4-of-5-bp4 {
         width: 80% !important;
     }
+
     .u-1-of-6-bp4 {
         width: 16.6666666667% !important;
     }
+
     .u-5-of-6-bp4 {
         width: 83.3333333333% !important;
     }
@@ -694,7 +754,6 @@ a:focus {
 /*------------------------------------*\
   #MEDIA
 \*------------------------------------*/
-
 /*
     Media Queries
     ---
@@ -702,35 +761,29 @@ a:focus {
     These examples override the primary ('mobile first') styles.
     USE THEM INLINE!
 */
-
 /* Extra small devices (portrait phones, less than 576px)
    No media query since this is the default in mobile first design
 */
-
 /* Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {}
 */
-
 /* Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {}
 */
-
 /* Large devices (landscape tablets, desktops, 992px and up)
 @media (min-width: 992px) {}
 */
-
 /* Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {}
 */
-
 /*
     Print styles.
     ---
     Inlined to avoid the additional HTTP request:
     http://www.phpied.com/delay-loading-your-print-css/
 */
-
 @media print {
+
     *,
     *:before,
     *:after {
@@ -741,16 +794,20 @@ a:focus {
         box-shadow: none !important;
         text-shadow: none !important;
     }
+
     a,
     a:visited {
         text-decoration: underline;
     }
+
     a[href]:after {
-        content: " (" attr(href) ")";
+        content: " ("attr(href) ")";
     }
+
     abbr[title]:after {
-        content: " (" attr(title) ")";
+        content: " ("attr(title) ")";
     }
+
     /*
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
@@ -759,14 +816,17 @@ a:focus {
     a[href^="javascript:"]:after {
         content: "";
     }
+
     pre {
         white-space: pre-wrap !important;
     }
+
     pre,
     blockquote {
         border: 1px solid #999;
         page-break-inside: avoid;
     }
+
     /*
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
@@ -774,16 +834,19 @@ a:focus {
     thead {
         display: table-header-group;
     }
+
     tr,
     img {
         page-break-inside: avoid;
     }
+
     p,
     h2,
     h3 {
         orphans: 3;
         widows: 3;
     }
+
     h2,
     h3 {
         page-break-after: avoid;
